--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,38 +6,12 @@
 	<display-name>WatchWorld</display-name>
 	<welcome-file-list>
 		<welcome-file>Home</welcome-file>
-		<welcome-file>erroePage.jsp</welcome-file>
+		<welcome-file>/errorPage/errorPage.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
 		<welcome-file>default.html</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
 		<welcome-file>default.htm</welcome-file>
 	</welcome-file-list>
 
-<!-- 	<filter> -->
-<!-- 		<filter-name>AuthenticationFilter</filter-name> -->
-<!-- 		<filter-class>filters.AuthenticationFilter</filter-class> -->
-<!-- 	</filter> -->
-<!-- 	<filter> -->
-<!-- 		<filter-name>AuthorizationFilter</filter-name> -->
-<!-- 		<filter-class>filters.AuthorizationFilter</filter-class> -->
-<!-- 	</filter> -->
 
-<!-- 	<filter-mapping> -->
-<!-- 		<filter-name>AuthenticationFilter</filter-name> -->
-<!-- 		<url-pattern>/*</url-pattern> -->
-<!-- 	</filter-mapping> -->
-<!-- 	<filter-mapping> -->
-<!-- 		<filter-name>AuthorizationFilter</filter-name> -->
-<!-- 		<url-pattern>/*</url-pattern> -->
-<!-- 	</filter-mapping> -->
-	
-<!-- 	<filter-mapping> -->
-<!-- 		<filter-name>AuthenticationFilter</filter-name> -->
-<!-- 		<url-pattern>/css/*</url-pattern> -->
-<!-- 	</filter-mapping> -->
-
-<!-- 	<error-page> -->
-<!-- 		<error-code>404</error-code> -->
-<!-- 		<location>/Error</location> -->
-<!-- 	</error-page> -->
 </web-app>
