--- a/.classpath
+++ b/.classpath
@@ -13,22 +13,22 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Users/ACER/Downloads/mysql-connector-j-8.3.0/mysql-connector-j-8.3.0/mysql-connector-j-8.3.0.jar">
+	<classpathentry kind="lib" path="C:/Users/ghart/Downloads/tomcat-bcrypt-1.0.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/ACER/Downloads/tomcat-bcrypt-1.0.0.jar">
+	<classpathentry kind="lib" path="C:/Users/ghart/Downloads/mysql-connector-j-8.4.0/mysql-connector-j-8.4.0/mysql-connector-j-8.4.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Islington/2nd year/semester 2/advanced programming/tutorial/Week8taglibs1.2.5_a22df91a-17a3-4eca-8794-08dc51faa89a_93445_/taglibs-standard-impl-1.2.5.jar">
+	<classpathentry kind="lib" path="C:/Users/ghart/Downloads/taglibs1.2.5_a22df91a-17a3-4eca-8794-08dc51faa89a_93445_/taglibs-standard-impl-1.2.5.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Islington/2nd year/semester 2/advanced programming/tutorial/Week8taglibs1.2.5_a22df91a-17a3-4eca-8794-08dc51faa89a_93445_/taglibs-standard-spec-1.2.5.jar">
+	<classpathentry kind="lib" path="C:/Users/ghart/Downloads/taglibs1.2.5_a22df91a-17a3-4eca-8794-08dc51faa89a_93445_/taglibs-standard-spec-1.2.5.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
